--- a/SymlinkCreator/ui/aboutWindow/AboutWindow.xaml
+++ b/SymlinkCreator/ui/aboutWindow/AboutWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SymlinkCreator.ui.aboutWindow.AboutWindow"
+<Window x:Class="SymlinkCreator.ui.aboutWindow.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:core="clr-namespace:SymlinkCreator.core"
         xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="About"
+        x:Name="AboutWindowRoot"
         Width="400"
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
@@ -37,10 +37,10 @@
             </TextBlock.Text>
         </TextBlock>
 
-        <TextBlock Text="Developed by Arnob Paul. Thank you for using this application! :)" />
+        <TextBlock x:Name="DeveloperTextBlock" />
 
         <TextBlock>
-            <Run Text="Visit the developer's website:" />
+            <Run x:Name="VisitWebsiteRun" />
             <LineBreak />
             <Hyperlink NavigateUri="{x:Static core:ApplicationConfiguration.CompanyWebAddressUri}" Click="Hyperlink_OnClick">
                 <Run Text="{x:Static core:ApplicationConfiguration.CompanyWebAddress}" />
@@ -48,7 +48,7 @@
         </TextBlock>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" IsDefault="True" Click="OkButton_OnClick" />
+            <Button x:Name="OkButton" IsDefault="True" Click="OkButton_OnClick" />
         </StackPanel>
     </StackPanel>
 </Window>
